<?xml version="1.0"?>
<package format="3">
  <name>vine_launch</name>
  <version>0.1.0</version>
  <description>Launch files for the Vine System</description>
  <maintainer email="who@example.com"></maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2</exec_depend>
