<?xml version="1.0"?>
<package format="3">
  <name>vine_launch</name>
  <version>0.1.0</version>
  <description>Workspace-wide ROS 2 launch files for the Vine System (camera, pressure, LEDs, micro-ROS, control).</description>
  <maintainer email="who@example.com"></maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime (launch-time) dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Packages whose nodes we launch (declare so users pulling just this pkg get them) -->
  <exec_depend>gravity_pressure_sensor</exec_depend>
  <exec_depend>led_control_chassis</exec_depend>
  <exec_depend>led_control_vine</exec_depend>
  <exec_depend>pressure_control</exec_depend>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
